@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Defs>
+    <!--Primitive-->
     <Ammunition.Defs.AmmoCategoryDef>
         <defName>LTS_Primitive</defName>
         <label>Primitive</label>
@@ -18,6 +19,7 @@
             <li MayRequire="Aoba.Musket">BA_Gun_Jezail_P</li>
         </excludeWeaponDefs>
     </Ammunition.Defs.AmmoCategoryDef>
+    <!--Medieval-->
     <Ammunition.Defs.AmmoCategoryDef>
         <defName>LTS_Medieval</defName>
         <label>Medieval</label>
@@ -31,8 +33,13 @@
         </includeWeaponDefs>
         <excludeWeaponDefs>
             <li MayRequire="VAMV.MaruRaceMod">BA_Gun_Jezail_P</li>
+            <li MayRequire="LimeTreeSnake.Tenants">LTS_RevolverMusket</li>
+            <li MayRequire="LimeTreeSnake.Tenants">LTS_QuadMusket</li>
+            <li MayRequire="LimeTreeSnake.Tenants">LTS_MusketRifle</li>
+            <li MayRequire="LimeTreeSnake.Tenants">LTS_PressureGun</li>
         </excludeWeaponDefs>
     </Ammunition.Defs.AmmoCategoryDef>
+    <!--Industrial-->
     <Ammunition.Defs.AmmoCategoryDef>
         <defName>LTS_Industrial</defName>
         <ammoType>Industrial</ammoType>
@@ -66,6 +73,7 @@
             <li MayRequire="Seioch.Kurin.HAR">Kurin_Gun_Surigum</li>
         </excludeWeaponDefs>
     </Ammunition.Defs.AmmoCategoryDef>
+    <!--Explosive-->
     <Ammunition.Defs.AmmoCategoryDef>
         <defName>LTS_Explosive</defName>
         <label>Explosive</label>
@@ -95,6 +103,7 @@
         </includeWeaponDefs>
         <excludeWeaponDefs></excludeWeaponDefs>
     </Ammunition.Defs.AmmoCategoryDef>
+    <!--Spacer-->
     <Ammunition.Defs.AmmoCategoryDef>
         <defName>LTS_Spacer</defName>
         <label>Spacer</label>
@@ -105,6 +114,7 @@
         <includeWeaponDefs></includeWeaponDefs>
         <excludeWeaponDefs></excludeWeaponDefs>
     </Ammunition.Defs.AmmoCategoryDef>
+    <!--Archotech-->
     <Ammunition.Defs.AmmoCategoryDef>
         <defName>LTS_Archotech</defName>
         <label>Archotech</label>
